# jockey-data

./: .gitignore  CLAUDE.md  README.md  main.py  pickle_to_csv.py  pyproject.toml  s3_accessor.py
.claude/commands/: confirm-pr-comments.md
.github/workflows/: ci.yml
.kiro/specs/pickle-to-json-api/: design.md  requirements.md  spec.json  tasks.md
app/: __init__.py  main.py
app/api/: __init__.py  exception_handlers.py  jockey.py
app/core/: __init__.py  logging.py
app/infrastructure/: __init__.py  dependencies.py  s3_accessor.py
app/models/: __init__.py  exceptions.py
app/services/: __init__.py  jockey_service.py
tests/: test_api_jockey.py  test_data.pickle  test_integration.py  test_jockey_service.py  test_s3_accessor.py
